tdf#93415: correct formula syntax for ADDRESS:

* supporting XL_A1 syntax
* use default syntax if not specified in formula
* auto update after changing formula syntax

Change-Id: Ic69e702512140bad8a73e5e2f96b819b1a7df395